Fixed glitch on mobile landscape

--- a/otterspace/css/styles.css
+++ b/otterspace/css/styles.css
@@ -59,7 +59,7 @@ body {
     top: 50%;
     left: 50%;
     margin: 0;
-        transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
     transition: all 0.5s;
 }
 
@@ -247,6 +247,7 @@ h1 {
     
 h1 {
     font-size: 5em;
+    margin-left: -8px;
     transition: all 0.5s;
 }
 
@@ -270,12 +271,22 @@ h1 {
     }
 }
 
-@media screen and (orientation:landscape) and (min-width: 1px) and (max-width: 1300px) {
+@media screen and (orientation:landscape) and (min-width: 1px) and (max-width: 1260px) {
 html, body, #lock {
     
     overflow: visible;
 }
 .otter{
     display: none;
+}
+
+    #content {
+    top: 0%;
+    transform: translateX(-50%) translateY(0%);
+    transition: all 0.5s;
+}
+        h2 {
+margin-top: 30px;
+        transition: all 0.5s;
 }
 }
